--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body _height="auto">
-  <div id="vert">
-    <div id="info">
-    <p>
-    地址：上海市静安区南京西路818号19楼200031<br>
-电话：+86-21-58860000<br>
-e-mail : <a href="mailto:info@zhiyan.cn" target="_blank">info@zhiyan.cn</a>
-    </p>
-    </div>
+<div id="vert">
+  <div id="info">
+    <p> 地址：上海市静安区南京西路818号19楼<br>
+      19F, 818, West Nanjing Road, Shanghai<br>
+      电话：+86-21-58860000<br>
+      For English: +86 180 1732 6686<br>
+      e-mail : <a href="mailto:info@zhiyan.cn" target="_blank">info@zhiyan.cn</a> </p>
   </div>
+</div>
 </body>
 </html>
